# netcdf-viewer

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml  run.sh
src/: run_netcdf_viewer.py
src/netcdf_viewer/: main.py
src/netcdf_viewer/parsers/: netcdf_parser.py
src/netcdf_viewer/services/: streamlit_netcdf_service.py
src/netcdf_viewer/viewers/: streamlit_viewer.py
